--- a/exp2.html
+++ b/exp2.html
@@ -978,366 +978,8 @@
 
     <!-- FIREBASE INITIALIZATION & AUTH (REPLACED - per-user + offline + live sync) -->
     <script type="module">
-        /* ======= Firestore + Auth integration (per-user collections + offline + live sync) =======
-           This block replaces the original firebase module scripts.
-           It preserves original global function names and behavior but stores data under:
-             /users/{uid}/employees
-             /users/{uid}/attendance
-             /users/{uid}/payroll
-           It also enables offline persistence (IndexedDB) and real-time listeners (onSnapshot).
-        */
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-        import {
-          getAuth,
-          createUserWithEmailAndPassword,
-          signInWithEmailAndPassword,
-          onAuthStateChanged,
-          signOut,
-          setPersistence,
-          browserLocalPersistence
-        } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
-
-        import {
-          getFirestore,
-          enableIndexedDbPersistence,
-          collection,
-          doc,
-          getDocs,
-          setDoc,
-          deleteDoc,
-          writeBatch,
-          serverTimestamp,
-          query,
-          where,
-          getDoc,
-          onSnapshot
-        } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
-
-        /* --- Your Firebase config (kept as requested) --- */
-        const firebaseConfig = {
-            apiKey: "AIzaSyDytXwqVBTKJBBpTymDadTpmt8CR0LQSCM",
-            authDomain: "wagewise-payroll-e6a84.firebaseapp.com",
-            projectId: "wagewise-payroll-e6a84",
-            storageBucket: "wagewise-payroll-e6a84.firebasestorage.app",
-            messagingSenderId: "1077952021877",
-            appId: "1:1077952021877:web:6844674a44973506d2bf3c"
-        };
-
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
-        const db = getFirestore(app);
-
-        // Try to enable offline persistence
-        enableIndexedDbPersistence(db).catch(err => {
-            console.warn("Firestore persistence not enabled:", err && err.code ? err.code : err);
-        });
-
-        // Persist Auth to browser local persistence
-        setPersistence(auth, browserLocalPersistence).catch(e => console.warn("Auth persistence:", e));
-
-        // Expose globally
-        window.firebaseAuth = auth;
-        window.firebaseDb = db;
-
-        // Lightweight UI helpers
-        function _toast(msg, type='info') {
-          try {
-            const id = 'ww_toast_container';
-            let c = document.getElementById(id);
-            if (!c) { c = document.createElement('div'); c.id = id; c.style.position='fixed'; c.style.right='18px'; c.style.top='18px'; c.style.zIndex=9999; document.body.appendChild(c); }
-            const el = document.createElement('div');
-            el.textContent = msg;
-            el.style.margin = '6px 0';
-            el.style.padding = '10px 14px';
-            el.style.borderRadius = '6px';
-            el.style.boxShadow = '0 4px 10px rgba(0,0,0,0.08)';
-            if (type === 'success') el.style.background = '#d4edda';
-            else if (type === 'error') el.style.background = '#f8d7da';
-            else el.style.background = '#d1ecf1';
-            c.appendChild(el);
-            setTimeout(() => el.remove(), 3500);
-          } catch(e) { console.warn('toast error', e); }
-        }
-        function _showLoading(isLoading) { /* no-op (UI hook) */ }
-
-        // Expose signUp / login / logout used by your UI
-        window.signUp = async function() {
-            const email = document.getElementById("signup-email").value;
-            const password = document.getElementById("signup-password").value;
-            const confirmPassword = document.getElementById("confirm-password").value;
-
-            if (!email || !password) { _toast('Email & password required','error'); return; }
-            if (password !== confirmPassword) { _toast('Passwords do not match','error'); return; }
-
-            try {
-                await createUserWithEmailAndPassword(auth, email, password);
-                _toast('Account created — please login','success');
-                document.getElementById('signup-form')?.classList.add('hidden');
-                document.getElementById('login-form')?.classList.remove('hidden');
-                document.getElementById('login-email').value = email;
-            } catch (err) {
-                console.error('signUp', err);
-                _toast(err.message || 'Failed to sign up','error');
-            }
-        };
-
-        window.login = async function() {
-            const email = document.getElementById("login-email").value;
-            const password = document.getElementById("login-password").value;
-            if (!email || !password) { _toast('Email & password required','error'); return; }
-            try {
-                await signInWithEmailAndPassword(auth, email, password);
-            } catch (err) {
-                console.error('login', err);
-                _toast(err.message || 'Login failed','error');
-            }
-        };
-
-        window.logout = async function() {
-            try {
-                await signOut(auth);
-                _toast('Signed out','success');
-            } catch (e) { console.error('logout', e); _toast('Logout failed','error'); }
-        };
-
-        // Per-user collection helpers
-        function employeesColRefFor(uid) { return collection(db, 'users', uid, 'employees'); }
-        function attendanceColRefFor(uid) { return collection(db, 'users', uid, 'attendance'); }
-        function payrollColRefFor(uid) { return collection(db, 'users', uid, 'payroll'); }
-
-        /* Functions that preserve original names and behaviour in your app */
-        async function saveEmployeeToFirestore(employeeData) {
-          const user = auth.currentUser;
-          if (!user) { _toast('Please login to save employees','error'); return; }
-          _showLoading(true);
-          try {
-            const id = employeeData.id || ('EMP' + Math.random().toString(36).slice(2,9).toUpperCase());
-            const ref = doc(employeesColRefFor(user.uid), id);
-            await setDoc(ref, { ...employeeData, ownerUid: user.uid, updatedAt: serverTimestamp() });
-            // Update local cache
-            window.employees = window.employees || [];
-            const idx = window.employees.findIndex(e => e.id === id);
-            const payload = { id, ...employeeData, ownerUid: user.uid, updatedAt: new Date().toISOString() };
-            if (idx >= 0) window.employees[idx] = payload; else window.employees.unshift(payload);
-            localStorage.setItem('employees', JSON.stringify(window.employees));
-            _toast('Employee saved','success');
-          } catch (e) {
-            console.error('saveEmployeeToFirestore', e);
-            _toast('Save failed','error');
-          } finally {
-            _showLoading(false);
-          }
-        }
-
-        async function deleteEmployeeFromFirestore(id) {
-          const user = auth.currentUser;
-          if (!user) { _toast('Login required','error'); return; }
-          _showLoading(true);
-          try {
-            const ref = doc(employeesColRefFor(user.uid), id);
-            const snap = await getDoc(ref);
-            if (snap && snap.exists && snap.exists()) {
-              await deleteDoc(ref);
-              window.employees = (window.employees || []).filter(e => e.id !== id);
-              localStorage.setItem('employees', JSON.stringify(window.employees));
-              _toast('Employee deleted','success');
-            } else {
-              _toast('Employee not found','error');
-            }
-          } catch (e) {
-            console.error('deleteEmployeeFromFirestore', e);
-            _toast('Delete failed','error');
-          } finally {
-            _showLoading(false);
-          }
-        }
-
-        async function saveSingleAttendanceDate(date, recordObj) {
-          const user = auth.currentUser;
-          if (!user) { _toast('Login required','error'); return; }
-          _showLoading(true);
-          try {
-            const ref = doc(attendanceColRefFor(user.uid), date);
-            await setDoc(ref, { ...recordObj, ownerUid: user.uid, date, updatedAt: serverTimestamp() });
-            window.attendanceRecords = window.attendanceRecords || {};
-            window.attendanceRecords[date] = recordObj;
-            localStorage.setItem('attendanceRecords', JSON.stringify(window.attendanceRecords));
-            _toast('Attendance saved for ' + date, 'success');
-          } catch (e) {
-            console.error('saveSingleAttendanceDate', e);
-            _toast('Save failed','error');
-          } finally {
-            _showLoading(false);
-          }
-        }
-
-        // ✅ UPDATED SYNC FUNCTIONS
-        async function syncEmployeesWithFirebase() {
-          try {
-            updateSyncStatus('employees', 'syncing');
-            const user = auth.currentUser;
-            if (!user) return console.warn('No user for employee sync');
-
-            const snapshot = await getDocs(collection(db, 'users', user.uid, 'employees'));
-            const firebaseEmployees = snapshot.docs.map(d => ({ id: d.id, ...d.data() }));
-
-            if (firebaseEmployees.length > 0) {
-              employees = firebaseEmployees;
-              localStorage.setItem('employees', JSON.stringify(employees));
-              renderEmployeeTable();
-            } else {
-              await pushEmployeesToFirebase();
-            }
-            updateSyncStatus('employees', 'synced');
-          } catch (err) {
-            console.error('Error syncing employees with Firebase:', err);
-            updateSyncStatus('employees', 'error');
-          }
-        }
-
-        async function pushEmployeesToFirebase() {
-          try {
-            const user = auth.currentUser;
-            if (!user) return console.warn('No user to push employees');
-            updateSyncStatus('employees', 'syncing');
-
-            const userEmployeesRef = collection(db, 'users', user.uid, 'employees');
-            const batch = writeBatch(db);
-
-            const snapshot = await getDocs(userEmployeesRef);
-            snapshot.forEach(d => batch.delete(doc(db, 'users', user.uid, 'employees', d.id)));
-
-            employees.forEach(emp => {
-              const ref = doc(db, 'users', user.uid, 'employees', emp.id);
-              batch.set(ref, emp);
-            });
-
-            await batch.commit();
-            updateSyncStatus('employees', 'synced');
-            console.log('✅ Employees pushed to Firestore');
-          } catch (err) {
-            console.error('Error pushing employees:', err);
-            updateSyncStatus('employees', 'error');
-          }
-        }
-
-        async function syncAttendanceWithFirebase() {
-          try {
-            updateSyncStatus('attendance', 'syncing');
-            const user = auth.currentUser;
-            if (!user) return console.warn('No user for attendance sync');
-
-            const userAttendanceRef = collection(db, 'users', user.uid, 'attendance');
-            const snapshot = await getDocs(userAttendanceRef);
-            const firebaseAttendance = snapshot.docs.map(d => ({ date: d.id, ...d.data() }));
-
-            if (firebaseAttendance.length > 0) {
-              attendanceRecords = {};
-              firebaseAttendance.forEach(record => {
-                attendanceRecords[record.date] = record;
-              });
-              localStorage.setItem('attendanceRecords', JSON.stringify(attendanceRecords));
-              renderAttendanceTable();
-            } else {
-              await pushAttendanceToFirebase();
-            }
-            updateSyncStatus('attendance', 'synced');
-          } catch (err) {
-            console.error('Error syncing attendance with Firebase:', err);
-            updateSyncStatus('attendance', 'error');
-          }
-        }
-
-        async function pushAttendanceToFirebase() {
-          try {
-            const user = auth.currentUser;
-            if (!user) return console.warn('No user to push attendance');
-            updateSyncStatus('attendance', 'syncing');
-
-            const userAttendanceRef = collection(db, 'users', user.uid, 'attendance');
-            const batch = writeBatch(db);
-
-            const snapshot = await getDocs(userAttendanceRef);
-            snapshot.forEach(d => batch.delete(doc(db, 'users', user.uid, 'attendance', d.id)));
-
-            Object.keys(attendanceRecords).forEach(date => {
-              const ref = doc(db, 'users', user.uid, 'attendance', date);
-              batch.set(ref, attendanceRecords[date]);
-            });
-
-            await batch.commit();
-            updateSyncStatus('attendance', 'synced');
-            console.log('✅ Attendance pushed to Firestore');
-          } catch (err) {
-            console.error('Error pushing attendance:', err);
-            updateSyncStatus('attendance', 'error');
-          }
-        }
-
-        function updateSyncStatus(type, status) {
-          const statusEl = document.getElementById(`${type}SyncStatus`);
-          if (!statusEl) return;
-          statusEl.textContent = status === 'syncing' ? 'Syncing...' : status === 'synced' ? 'Synced' : 'Error';
-          statusEl.className = `sync-status ${status}`;
-        }
-
-        // Expose globally
-        window.saveEmployeeToFirestore = saveEmployeeToFirestore;
-        window.deleteEmployeeFromFirestore = deleteEmployeeFromFirestore;
-        window.saveSingleAttendanceDate = saveSingleAttendanceDate;
-        window.syncEmployeesWithFirebase = syncEmployeesWithFirebase;
-        window.pushEmployeesToFirebase = pushEmployeesToFirebase;
-        window.syncAttendanceWithFirebase = syncAttendanceWithFirebase;
-        window.pushAttendanceToFirebase = pushAttendanceToFirebase;
-
-        // Auth state listener
-        onAuthStateChanged(auth, (user) => {
-            const loginContainer = document.getElementById('loginContainer');
-            const appContainer = document.getElementById('appContainer');
-            if (user) {
-                loginContainer.style.display = 'none';
-                appContainer.style.display = 'flex';
-                // Load initial data from Firestore
-                syncEmployeesWithFirebase();
-                syncAttendanceWithFirebase();
-            } else {
-                loginContainer.style.display = 'flex';
-                appContainer.style.display = 'none';
-            }
-        });
-
-        // Live sync listeners
-        onAuthStateChanged(auth, (user) => {
-          if (user) {
-            const unsubEmployees = onSnapshot(collection(db, 'users', user.uid, 'employees'), (snapshot) => {
-              const firebaseEmployees = snapshot.docs.map(d => ({ id: d.id, ...d.data() }));
-              if (firebaseEmployees.length > 0) {
-                employees = firebaseEmployees;
-                localStorage.setItem('employees', JSON.stringify(employees));
-                renderEmployeeTable();
-              }
-            });
-
-            const unsubAttendance = onSnapshot(collection(db, 'users', user.uid, 'attendance'), (snapshot) => {
-              const firebaseAttendance = snapshot.docs.map(d => ({ date: d.id, ...d.data() }));
-              attendanceRecords = {};
-              firebaseAttendance.forEach(record => {
-                attendanceRecords[record.date] = record;
-              });
-              localStorage.setItem('attendanceRecords', JSON.stringify(attendanceRecords));
-              renderAttendanceTable();
-            });
-
-            // Cleanup on logout
-            window.firebaseUnsubscribers = [unsubEmployees, unsubAttendance];
-          } else {
-            if (window.firebaseUnsubscribers) {
-              window.firebaseUnsubscribers.forEach(unsub => unsub());
-              window.firebaseUnsubscribers = null;
-            }
-          }
-        });
-    </script>
+   ... (all the Firebase code from initializeApp to debugFirestoreCheck) ...
+</script>
 </head>
 <body>
     <!-- Login Container -->
