--- a/exp2.html
+++ b/exp2.html
@@ -978,7 +978,179 @@
 
     <!-- FIREBASE INITIALIZATION & AUTH (REPLACED - per-user + offline + live sync) -->
     <script type="module">
-   ... (all the Firebase code from initializeApp to debugFirestoreCheck) ...
+   import { getApps, initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+import {
+  getAuth,
+  onAuthStateChanged,
+  createUserWithEmailAndPassword,
+  signInWithEmailAndPassword,
+  signOut
+} from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
+import {
+  getFirestore,
+  enableIndexedDbPersistence,
+  collection,
+  doc,
+  getDocs,
+  setDoc,
+  deleteDoc,
+  writeBatch
+} from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+
+/* --------------------------------------------------------
+   🔹 Initialize Firebase (prevent duplicate initialization)
+   -------------------------------------------------------- */
+const firebaseConfig = {
+  const firebaseConfig = {
+  apiKey: "AIzaSyDytXwqVBTKJBBpTymDadTpmt8CR0LQSCM",
+  authDomain: "wagewise-payroll-e6a84.firebaseapp.com",
+  projectId: "wagewise-payroll-e6a84",
+  storageBucket: "wagewise-payroll-e6a84.firebasestorage.app",
+  messagingSenderId: "1077952021877",
+  appId: "1:1077952021877:web:6844674a44973506d2bf3c"
+};
+};
+
+const app = getApps().length ? getApps()[0] : initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
+window.firebaseAuth = auth;
+window.firebaseDb = db;
+
+/* --------------------------------------------------------
+   🔹 Enable Offline Caching
+   -------------------------------------------------------- */
+enableIndexedDbPersistence(db).catch(err => {
+  console.warn("⚠️ Offline persistence error:", err.code);
+});
+
+/* --------------------------------------------------------
+   🔹 User Authentication
+   -------------------------------------------------------- */
+window.signUp = async function () {
+  const email = document.getElementById("signup-email").value.trim();
+  const password = document.getElementById("signup-password").value.trim();
+  const confirm = document.getElementById("confirm-password").value.trim();
+
+  if (password !== confirm) return alert("Passwords do not match");
+
+  try {
+    await createUserWithEmailAndPassword(auth, email, password);
+    alert("Account created successfully!");
+  } catch (err) {
+    alert("Sign-up failed: " + err.message);
+  }
+};
+
+window.login = async function () {
+  const email = document.getElementById("login-email").value.trim();
+  const password = document.getElementById("login-password").value.trim();
+
+  try {
+    await signInWithEmailAndPassword(auth, email, password);
+  } catch (err) {
+    alert("Login failed: " + err.message);
+  }
+};
+
+window.logout = async function () {
+  await signOut(auth);
+  document.getElementById("appContainer").style.display = "none";
+  document.getElementById("loginContainer").style.display = "flex";
+};
+
+/* --------------------------------------------------------
+   🔹 Firestore: Employee CRUD
+   -------------------------------------------------------- */
+window.saveEmployeeToFirestore = async function (emp) {
+  const user = auth.currentUser;
+  if (!user) return console.error("No user logged in");
+  const ref = doc(db, "users", user.uid, "employees", emp.id);
+  await setDoc(ref, emp, { merge: true });
+};
+
+window.deleteEmployeeFromFirestore = async function (empId) {
+  const user = auth.currentUser;
+  if (!user) return;
+  const ref = doc(db, "users", user.uid, "employees", empId);
+  await deleteDoc(ref);
+};
+
+window.syncEmployeesWithFirebase = async function () {
+  const user = auth.currentUser;
+  if (!user) return alert("Please login first");
+
+  try {
+    const snapshot = await getDocs(collection(db, "users", user.uid, "employees"));
+    const employees = snapshot.docs.map(d => d.data());
+    localStorage.setItem("employees", JSON.stringify(employees));
+    console.log("✅ Employees synced:", employees.length);
+    document.getElementById("employeesSyncStatus").textContent = "Synced";
+  } catch (err) {
+    console.error("Error syncing employees:", err);
+  }
+};
+
+/* --------------------------------------------------------
+   🔹 Firestore: Attendance
+   -------------------------------------------------------- */
+window.saveSingleAttendanceDate = async function (date, data) {
+  const user = auth.currentUser;
+  if (!user) return;
+  const ref = doc(db, "users", user.uid, "attendance", date);
+  await setDoc(ref, data, { merge: true });
+};
+
+window.syncAttendanceWithFirebase = async function () {
+  const user = auth.currentUser;
+  if (!user) return alert("Please login first");
+
+  try {
+    const snapshot = await getDocs(collection(db, "users", user.uid, "attendance"));
+    const attendance = {};
+    snapshot.forEach(d => (attendance[d.id] = d.data()));
+    localStorage.setItem("attendanceRecords", JSON.stringify(attendance));
+    console.log("✅ Attendance synced:", Object.keys(attendance).length);
+    document.getElementById("attendanceSyncStatus").textContent = "Synced";
+  } catch (err) {
+    console.error("Error syncing attendance:", err);
+  }
+};
+
+/* --------------------------------------------------------
+   🔹 Firestore: Payroll (for backup)
+   -------------------------------------------------------- */
+window.savePayrollToFirestore = async function (data) {
+  const user = auth.currentUser;
+  if (!user) return;
+  const batch = writeBatch(db);
+  const payrollCollection = collection(db, "users", user.uid, "payroll");
+
+  data.forEach(entry => {
+    const ref = doc(payrollCollection, entry.id);
+    batch.set(ref, entry, { merge: true });
+  });
+
+  await batch.commit();
+  console.log("✅ Payroll data backed up to Firestore");
+};
+
+/* --------------------------------------------------------
+   🔹 Auth State Listener
+   -------------------------------------------------------- */
+onAuthStateChanged(auth, user => {
+  if (user) {
+    document.getElementById("loginContainer").style.display = "none";
+    document.getElementById("appContainer").style.display = "flex";
+    document.getElementById("userEmail").textContent = user.email;
+    console.log("✅ User logged in:", user.email);
+    window.syncEmployeesWithFirebase();
+    window.syncAttendanceWithFirebase();
+  } else {
+    document.getElementById("loginContainer").style.display = "flex";
+    document.getElementById("appContainer").style.display = "none";
+  }
+});
 </script>
 </head>
 <body>
