--- a/index.html
+++ b/index.html
@@ -6808,5 +6808,14 @@ Payment Method: ${record.paymentMethod}`);
             showSection('reports');
         };
     </script>
+    <!-- Compliance Risk Engine -->
+<script src="./complianceRulesIndia.js"></script>
+<script src="./complianceRiskEngine.js"></script>
+<script src="./complianceRiskUI.js"></script>
+
+<!-- Payroll Anomaly Detector -->
+<script src="./payrollAnomalyDetector.js"></script>
+
 </body>
 </html>
+
