--- a/index.html
+++ b/index.html
@@ -6879,11 +6879,13 @@ Payment Method: ${record.paymentMethod}`);
     }
   });
 </script>
-
-
-   
+<script src="./complianceRulesIndia.js"></script>
+<script src="./complianceRiskEngine.js"></script>
+<script src="./complianceRiskUI.js"></script>
+<script src="./payrollAnomalyDetector.js"></script>
 </body>
 </html>
+
 
 
 
