--- a/index.html
+++ b/index.html
@@ -2218,7 +2218,7 @@
         <div class="login-box">
             <!-- Login Form -->
             <div id="login-form">
-                <img src="/eye_logo.png" alt="" class="login-logo">
+                <img src="/eye_logo.png" alt="/eye_logo.png" class="login-logo">
                 <div class="login-title">Samkitec Resources</div>
                 <h2>Login</h2>
                 <div class="form-group">
@@ -2241,7 +2241,7 @@
             
             <!-- Signup Form -->
             <div id="signup-form" class="hidden">
-                <img src="/eye_logo.png" alt="" class="login-logo">
+                <img src="/eye_logo.png" alt="/eye_logo.png" class="login-logo">
                 <div class="login-title">Samkitec Resources</div>
                 <h2>Sign Up</h2>
                 <div class="form-group">
@@ -8059,6 +8059,7 @@ Employees: ${employeeSummary}`);
     </script>
 </body>
 </html>
+
 
 
 
