--- a/index.html
+++ b/index.html
@@ -2218,7 +2218,7 @@
         <div class="login-box">
             <!-- Login Form -->
             <div id="login-form">
-                <img src="/eye_logo.png" alt="/eye_logo.png" class="login-logo">
+                <img src="./assets/logo_eye.png" alt="eye logo" class="login-logo">
                 <div class="login-title">Samkitec Resources</div>
                 <h2>Login</h2>
                 <div class="form-group">
@@ -2241,7 +2241,7 @@
             
             <!-- Signup Form -->
             <div id="signup-form" class="hidden">
-                <img src="/eye_logo.png" alt="/eye_logo.png" class="login-logo">
+                <img src="./assets/logo_eye.png" alt="eye logo" class="login-logo">
                 <div class="login-title">Samkitec Resources</div>
                 <h2>Sign Up</h2>
                 <div class="form-group">
@@ -2289,7 +2289,7 @@
 
     <!-- Splash Screen -->
     <div id="splash-screen" class="splash-screen" aria-hidden="true">
-        <img src="/eye_logo.png" alt="" class="splash-logo animate-fadeZoom">
+        <img src="./assets/logo_eye.png" alt="eye logo" class="splash-logo animate-fadeZoom">
     </div>
 
     <!-- Main Application (Initially hidden) -->
@@ -8059,6 +8059,7 @@ Employees: ${employeeSummary}`);
     </script>
 </body>
 </html>
+
 
 
 
